--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -48,28 +48,20 @@
             android:layout_marginTop="20dp"/>
 
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/forgot_text"
-            android:id="@+id/forgot_text_layout"
-            android:padding="20dp"
-            android:theme="@style/TextLabelWhite">
-
             <EditText
                 android:id="@+id/email_forgot"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"
-                android:imeActionId="@+id/forgot"
+                android:imeOptions="actionDone"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
+                android:padding="@dimen/med_padding"
                 android:textColor="@color/colorWhite"
+                android:backgroundTint="@color/colorNearWhite"
                 android:textColorHint="@color/colorNearWhite"
-                android:textColorLink="@color/colorWhite"
-                />
+                android:layout_below="@+id/forgot_text"/>
 
-        </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/forgot_button"
@@ -81,7 +73,8 @@
             android:text="KIRIM"
             android:textColor="@color/colorWhite"
             android:textSize="16sp"
+            android:layout_marginTop="@dimen/med_padding"
             android:textStyle="bold"
-            android:layout_below="@+id/forgot_text_layout"/>
+            android:layout_below="@+id/email_forgot"/>
     </RelativeLayout>
 </RelativeLayout>
