--- a/app/src/main/res/layout/deliv_price_item_view.xml
+++ b/app/src/main/res/layout/deliv_price_item_view.xml
@@ -22,6 +22,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1"
+                android:layout_gravity="center_vertical"
                 android:padding="@dimen/xmin_padding">
 
                 <LinearLayout
@@ -64,6 +65,28 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="15 KM"
+                        android:gravity="end"
+                        android:textSize="@dimen/tiny_text"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/small_space"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="@dimen/text_label_med"
+                        android:layout_height="wrap_content"
+                        android:text="Jarak Gratis :"
+                        android:textSize="@dimen/tiny_text"/>
+
+                    <TextView
+                        android:id="@+id/dp_free"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1.500 IDR"
                         android:gravity="end"
                         android:textSize="@dimen/tiny_text"/>
                 </LinearLayout>
