--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -138,7 +138,7 @@
                 android:layout_marginLeft="10dp"
                 android:fontFamily="sans-serif"
                 android:gravity="center"
-                android:text="Create Your Account"
+                android:text="Daftar Akun Baru"
                 android:textColor="@android:color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
