--- a/app/src/main/res/layout/activity_onboard.xml
+++ b/app/src/main/res/layout/activity_onboard.xml
@@ -4,10 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/colorBlack87"
+    android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
     tools:context="id.rentist.mitrarentist.OnBoardActivity">
-
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
