--- a/app/src/main/res/layout/content_form_delivery_price.xml
+++ b/app/src/main/res/layout/content_form_delivery_price.xml
@@ -190,6 +190,50 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="Jarak Gratis"
+                    android:textColor="@color/colorBlack" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
+
+                    <EditText
+                        android:id="@+id/distance_free"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorNearWhite"
+                        android:ems="10"
+                        android:hint="E.g. 10"
+                        android:text="1"
+                        android:inputType="number"
+                        android:imeOptions="actionNext"
+                        android:padding="@dimen/min_padding" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="@dimen/min_padding"
+                        android:text="KM"
+                        android:textColor="@color/colorBlack54"
+                        android:textSize="@dimen/medium_text" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:text="Biaya per KM"
                     android:textColor="@color/colorBlack" />
 
