--- a/app/src/main/res/layout/content_form_driver.xml
+++ b/app/src/main/res/layout/content_form_driver.xml
@@ -40,7 +40,12 @@
                     android:id="@+id/btnUploadFoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/xmin_padding"
+                    android:layout_marginTop="20dp"
+                    android:paddingLeft="@dimen/min_padding"
+                    android:paddingRight="@dimen/min_padding"
+                    android:background="@color/colorGreenRe"
+                    android:textColor="@color/colorWhite"
+                    android:textStyle="bold"
                     android:layout_weight="1"
                     android:text="Pilih Foto" />
             </LinearLayout>
@@ -63,7 +68,6 @@
                     android:id="@+id/dr_driver_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorNearWhite"
                     android:ems="10"
                     android:hint="Nama"
                     android:imeOptions="actionNext"
@@ -94,7 +98,6 @@
                         android:id="@+id/dr_rad_gender"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorNearWhite"
                         android:checkedButton="@+id/radioMale"
                         android:orientation="horizontal">
 
@@ -121,30 +124,28 @@
             </LinearLayout>
 
             <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/xmin_padding"
+            android:orientation="vertical"
+            android:padding="@dimen/xmin_padding">
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/xmin_padding"
-                android:orientation="vertical"
-                android:padding="@dimen/xmin_padding">
+                android:layout_height="wrap_content"
+                android:text="Email"
+                android:textColor="@color/colorBlack" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Email"
-                    android:textColor="@color/colorBlack" />
-
-                <EditText
-                    android:id="@+id/dr_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorNearWhite"
-                    android:ems="10"
-                    android:hint="Email"
-                    android:imeOptions="actionNext"
-                    android:maxLength="50"
-                    android:inputType="textEmailAddress"
-                    android:padding="@dimen/min_padding" />
-            </LinearLayout>
+            <EditText
+                android:id="@+id/dr_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Email"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:padding="@dimen/min_padding" />
+        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -161,8 +162,7 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorNearWhite">
+                    android:layout_height="wrap_content">
 
                     <com.hbb20.CountryCodePicker
                         android:id="@+id/country_code"
@@ -177,12 +177,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@+id/country_code"
-                        android:background="@color/colorNearWhite"
                         android:ems="10"
                         android:hint="8xx xxxx xxxx"
                         android:imeOptions="actionNext"
                         android:inputType="phone"
-                        android:maxLength="11"
                         android:padding="@dimen/min_padding" />
 
                 </RelativeLayout>
@@ -207,10 +205,8 @@
                     android:id="@+id/dr_sim_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorNearWhite"
                     android:ems="10"
                     android:hint="SIM"
-                    android:maxLength="12"
                     android:imeOptions="actionNext"
                     android:inputType="number"
                     android:padding="@dimen/min_padding" />
@@ -230,18 +226,14 @@
                     android:text="Tanggal Lahir"
                     android:textColor="@color/colorBlack" />
 
-                <TextView
-                    android:id="@+id/dr_bdate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorNearWhite"
-                    android:drawableEnd="@drawable/ic_date_range_black_24dp"
-                    android:ems="10"
-                    android:hint="YYYY-mm-dd"
-                    android:inputType="date"
-                    android:padding="@dimen/min_padding"
-                    android:clickable="true"/>
-
+                <EditText
+                android:id="@+id/dr_bdate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="YYYY-mm-dd"
+                android:inputType="date"
+                android:padding="@dimen/min_padding" />
 
                 <!--<android.support.v7.widget.AppCompatEditText-->
                     <!--android:id="@+id/dr_bdate"-->
@@ -265,9 +257,9 @@
                 android:layout_gravity="bottom"
                 android:layout_marginTop="@dimen/xmin_padding"
                 android:layout_marginBottom="@dimen/xmin_padding"
-                android:background="@color/colorPrimaryDark"
+                android:background="@color/colorGreenRe"
                 android:textAlignment="center"
-                android:text="@string/btn_save"
+                android:text="Simpan"
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/medium_text" />
 
