--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -33,8 +33,8 @@
 
                     <ImageView
                         android:id="@+id/pr_thumb"
-                        android:layout_width="@dimen/thumb_med_width"
-                        android:layout_height="@dimen/thumb_med_height"
+                        android:layout_width="@dimen/thumb_width"
+                        android:layout_height="@dimen/thumb_height"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginBottom="@dimen/xmin_padding"
                         android:layout_weight="1"
@@ -49,26 +49,41 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="@dimen/xmin_padding"
-                        android:background="@color/colorPrimaryDark"
                         android:paddingBottom="@dimen/xmin_padding"
                         android:paddingLeft="@dimen/med_padding"
                         android:paddingRight="@dimen/med_padding"
                         android:paddingTop="@dimen/xmin_padding"
+                        android:text="Ujin Rental"
                         android:textColor="@color/colorWhite"
-                        android:textSize="@dimen/medium_text"
+                        android:textSize="@dimen/large_text"
                         android:textStyle="bold" />
+
+                    <!--<TextView-->
+                        <!--android:id="@+id/pr_rental_type"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_gravity="center_horizontal"-->
+                        <!--android:layout_marginTop="@dimen/xmin_padding"-->
+                        <!--android:textColor="@color/colorWhite"-->
+                        <!--android:padding="@dimen/xmin_padding"-->
+                        <!--android:background="@color/colorGreenRe"-->
+                        <!--android:text="ID Rental : 117000000000105 (Personal)"-->
+                        <!--android:textSize="@dimen/almost_tiny_text"-->
+                         <!--/>-->
 
                     <LinearLayout
                         android:layout_width="wrap_content"
+                        android:layout_marginTop="@dimen/xmin_padding"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_gravity="center_horizontal">
+                        android:layout_gravity="center_horizontal"
+                        android:background="@color/colorGreenRe"
+                        android:padding="@dimen/xmin_padding">
 
                         <TextView
                             android:id="@+id/pr_rental_code"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/xmin_padding"
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/almost_tiny_text"
                             android:text="ID Rental : 1170000000129"
@@ -79,12 +94,12 @@
                             android:id="@+id/pr_rental_type"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/xmin_padding"
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/almost_tiny_text"
                             android:text="(Personal)"
                             />
                     </LinearLayout>
+
 
                 </LinearLayout>
 
@@ -96,7 +111,7 @@
                     android:foreground="?selectableItemBackground"
                     android:padding="@dimen/xmin_padding"
                     app:cardBackgroundColor="@color/colorWhite"
-                    app:cardElevation="1dp">
+                    app:cardElevation="0dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -118,7 +133,7 @@
                                 android:layout_centerVertical="true"
                                 android:layout_marginEnd="@dimen/min_padding"
                                 android:contentDescription="location"
-                                app:srcCompat="@drawable/ic_person_black_24dp" />
+                                app:srcCompat="@drawable/ic_person_black_24dp"/>
 
                             <TextView
                                 android:id="@+id/ownertext"
@@ -127,7 +142,6 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_owner_ico"
                                 android:layout_marginBottom="@dimen/xmin_padding"
-
                                 android:text="Nama Pemilik/Penanggungjawab"
                                 android:textSize="12sp" />
 
@@ -140,6 +154,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_owner_ico"
                                 android:text="-"
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/medium_text" />
 
 
@@ -171,7 +186,6 @@
                                 android:text="Nomor KTP"
                                 android:textSize="12sp" />
 
-
                             <TextView
                                 android:id="@+id/pr_no_ktp"
                                 android:layout_width="wrap_content"
@@ -180,18 +194,16 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_ktp_ico"
                                 android:text="-"
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/medium_text" />
 
-
                         </RelativeLayout>
-
 
                         <RelativeLayout
                             android:id="@+id/pr_address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/min_padding"
-                            android:background="@color/colorPrimarySoft"
                             tools:ignore="UselessParent">
 
                             <ImageView
@@ -207,9 +219,9 @@
                                 android:id="@+id/alamattext"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/xmin_padding"
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_address_ico"
+                                android:layout_marginBottom="@dimen/xmin_padding"
                                 android:text="Alamat Usaha"
                                 android:textSize="12sp" />
 
@@ -221,6 +233,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_address_ico"
                                 android:text="-"
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/small_text" />
 
                             <TextView
@@ -231,6 +244,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_address_ico"
                                 android:text=""
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/small_text" />
 
                             <TextView
@@ -241,6 +255,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_village"
                                 android:text=""
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/small_text" />
 
                             <TextView
@@ -251,6 +266,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_address_ico"
                                 android:text=""
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/small_text" />
 
                             <TextView
@@ -261,6 +277,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_city"
                                 android:text=""
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/small_text" />
 
                             <TextView
@@ -271,6 +288,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_address_ico"
                                 android:text="-"
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/small_text" />
 
                         </RelativeLayout>
@@ -279,6 +297,7 @@
                             android:id="@+id/pr_no_telp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@color/colorPrimarySoft"
                             android:padding="@dimen/min_padding"
                             tools:ignore="UselessParent">
 
@@ -310,6 +329,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_telp_ico"
                                 android:text="-"
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/medium_text" />
 
                         </RelativeLayout>
@@ -319,7 +339,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/min_padding"
-                            android:background="@color/colorPrimarySoft"
                             tools:ignore="UselessParent">
 
                             <ImageView
@@ -349,6 +368,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_email_ico"
                                 android:text="-"
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/medium_text" />
 
                         </RelativeLayout>
@@ -357,6 +377,7 @@
                             android:id="@+id/pr_bank_info"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@color/colorPrimarySoft"
                             android:padding="@dimen/min_padding"
                             tools:ignore="UselessParent">
 
@@ -387,6 +408,7 @@
                                 android:layout_marginStart="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_bank_ico"
                                 android:text="-"
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/medium_text" />
 
                             <TextView
@@ -407,6 +429,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/space"
                                 android:text="-"
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/medium_text" />
 
                             <TextView
@@ -417,6 +440,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_bank_ico"
                                 android:text="-"
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/small_text"
                                 android:textStyle="bold" />
 
@@ -428,6 +452,7 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_bank_ico"
                                 android:text="-"
+                                android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/almost_tiny_text"
                                  />
 
@@ -454,7 +479,7 @@
                     android:layout_marginBottom="@dimen/med_padding"
                     android:layout_marginLeft="@dimen/med_padding"
                     android:layout_marginRight="@dimen/med_padding"
-                    android:background="@color/colorPrimary"
+                    android:background="@color/colorGreenRe"
                     android:padding="@dimen/min_padding">
 
                     <TextView
@@ -464,9 +489,10 @@
                         android:layout_alignParentEnd="false"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
-                        android:text="TESTIMONI"
+                        android:text="Testimoni Rental Anda"
                         android:textColor="@color/colorWhite"
-                        android:textSize="@dimen/medium_text" />
+                        android:textSize="@dimen/medium_text"
+                        android:textStyle="bold"/>
 
                     <ImageButton
                         android:id="@+id/view_testi"
