--- a/app/src/main/res/layout/content_user_detail.xml
+++ b/app/src/main/res/layout/content_user_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackgound"
+    android:background="@color/colorWhite"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.UserDetailActivity"
@@ -29,8 +29,8 @@
 
                 <ImageView
                     android:id="@+id/us_thumb"
-                    android:layout_width="@dimen/thumb_med_width"
-                    android:layout_height="@dimen/thumb_med_height"
+                    android:layout_width="@dimen/thumb_width"
+                    android:layout_height="@dimen/thumb_height"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
                     android:adjustViewBounds="false"
@@ -46,7 +46,6 @@
                     android:padding="@dimen/xmin_padding"
                     android:text="Nama"
                     android:textAlignment="center"
-                    android:textAllCaps="true"
                     android:textColor="@color/colorWhite"
                     android:textSize="@dimen/large_text"
                     android:textStyle="bold" />
@@ -67,7 +66,10 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="@dimen/med_padding"
+                android:layout_marginLeft="@dimen/med_padding"
+                android:layout_marginRight="@dimen/med_padding"
+                android:layout_marginBottom="@dimen/med_padding"
+                app:cardElevation="0dp"
                 android:padding="@dimen/xmin_padding">
 
                 <LinearLayout
@@ -90,7 +92,7 @@
                             android:layout_centerVertical="true"
                             android:layout_marginEnd="@dimen/min_padding"
                             android:contentDescription="user role"
-                            app:srcCompat="@drawable/ic_person_black_24dp" />
+                            app:srcCompat="@drawable/ic_person_grey_24dp" />
 
                         <TextView
                             android:id="@+id/us_role_name"
@@ -110,6 +112,7 @@
                             android:layout_below="@+id/us_role_name"
                             android:layout_marginLeft="@dimen/xmin_padding"
                             android:layout_toEndOf="@+id/us_role_ico"
+                            android:textColor="@color/colorBlack"
                             android:text="Jenis Pengguna"
                             android:textSize="12sp" />
 
@@ -129,7 +132,7 @@
                             android:layout_centerVertical="true"
                             android:layout_marginEnd="@dimen/min_padding"
                             android:contentDescription="phone"
-                            app:srcCompat="@drawable/ic_phone_android_black_24dp" />
+                            app:srcCompat="@drawable/ic_phone_android_grey_24dp" />
 
                         <TextView
                             android:id="@+id/us_phone_number"
@@ -150,6 +153,7 @@
                             android:layout_marginLeft="@dimen/xmin_padding"
                             android:layout_toEndOf="@+id/pr_telp_ico"
                             android:text="Telepon"
+                            android:textColor="@color/colorBlack"
                             android:textSize="12sp" />
 
                     </RelativeLayout>
@@ -169,7 +173,7 @@
                             android:layout_centerVertical="true"
                             android:layout_marginEnd="@dimen/min_padding"
                             android:contentDescription="email"
-                            app:srcCompat="@drawable/ic_email_black_24dp" />
+                            app:srcCompat="@drawable/ic_email_grey_24dp" />
 
                         <TextView
                             android:id="@+id/us_email"
@@ -190,6 +194,7 @@
                             android:layout_marginLeft="@dimen/xmin_padding"
                             android:layout_toEndOf="@+id/us_email_ico"
                             android:text="Email"
+                            android:textColor="@color/colorBlack"
                             android:textSize="12sp" />
 
                     </RelativeLayout>
