--- a/app/src/main/res/layout/grid_aset_category.xml
+++ b/app/src/main/res/layout/grid_aset_category.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="100"
-                android:textColor="@color/colorBlack"
+                android:textColor="@color/colorWhite"
                 android:gravity="center"
                 android:layout_alignParentEnd="true"
                 android:textSize="@dimen/almost_tiny_text"
